--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -1,7 +1,7 @@
-<section class="container-fluid container-upcoming-events py-4">
+<section class="container-fluid container-upcoming-events py-5">
   <div class="row">
     <div class="container">
-      <h3 class="text-center mb-4 font-weight-normal">Upcoming Events</h3>
+      <h3 class="text-center mb-4">Upcoming Events</h3>
       <div id="events-carousel-wrapper" style="min-height: 80px;">
 
       <script id="event-carousel" type="text/x-handlebars-template">
