--- a/app/views/web/ost/partners/_partner_companies.erb
+++ b/app/views/web/ost/partners/_partner_companies.erb
@@ -958,7 +958,7 @@
         <div class="col-6 col-md-3 p-0 category-all size-all visible <%= 'category-'+partner['partners_industry'].join(" category-") %> size-<%= partner['partners_size'] %>">
           <style>.aspect-ratio-box.hover-<%=index %>:hover {background-color: <%= partner['partners_on_hover_bgcolor'] %>;}</style>
           <div class="aspect-ratio-box hover-<%=index %>" data-toggle="modal" data-target="#infoModal-<%=index %>" title="<%= partner['partners_name'] %>">
-            <span class="aspect-ratio-box-inside partner-company" style="background-position-y: <%= ((100.00/(@partners.length-1))* partner['partners_sprite_index'].to_i).round(2)%>%;" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
+            <span class="aspect-ratio-box-inside partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner['partners_sprite_index'].to_i).round(2)%>%;" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
             <% if partner['partners_has_exited'] == true%>
               <div class="position-absolute" style="top: 10px;right: 0;font-size: 0;">
                 <span class="ribbon">PROJECT ENDED</span>
@@ -980,7 +980,7 @@
                   <div class="row">
                     <div class="col-12 col-md-9">
                       <div class="mt-3 mb-2">
-                        <span class="details-partner-company" style="background-position-y: <%= ((100.00/(@partners.length-1))* partner['partners_sprite_index'].to_i).round(2)%>%;"></span>
+                        <span class="details-partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner['partners_sprite_index'].to_i).round(2)%>%;"></span>
                       </div>
                       <div class="description">
                         <%= raw partner['partners_description'] %>
