--- a/app/assets/stylesheets/web/common/_icons.scss
+++ b/app/assets/stylesheets/web/common/_icons.scss
@@ -1,5 +1,5 @@
-$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v4-@2x.png";
-$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v4-@1x.png";
+$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v5-@2x.png";
+$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v5-@1x.png";
 
 @mixin icon-generator($width,$height,$posX,$posY,$offsetHover,$offsetActive,$scale:100) {
   background-image: url($sprite-location);
@@ -41,6 +41,9 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v4
 }
 .buy-ost-upbit-icon{
   @include icon-generator(189px, 52px, 1px, -256px, -262px, 1px, 70);
+}
+.buy-ost-coin-super-icon{
+  @include icon-generator(210px, 52px, 1px, -340px, -261px, 1px, 71);
 }
 
 // Header social icons CSS
