Adding "Coin Super" in Where to Buy $OST section

--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -47,7 +47,7 @@
                 <span class="buy-ost-coin-super-icon"></span>
               </a>
               <div class="btn-container mt-4 mb-5">
-                <a href="https://www.coinsuper.com/cointrade?symbol=ost" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
+                <a href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
               </div>
             </div>
           </div>
