--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -43,7 +43,7 @@
               </div>
             </div>
             <div class="col-xs-12 col-sm-3 align-self-end">
-              <a class="d-inline-block" href="https://www.coinsuper.com/cointrade?symbol=ost" target="_blank" title="Buy OST on Coinsuper">
+              <a class="d-inline-block" href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" title="Buy OST on Coinsuper">
                 <span class="buy-ost-coin-super-icon"></span>
               </a>
               <div class="btn-container mt-4 mb-5">
