--- a/app/views/web/ost/index/_home_carousel_content.erb
+++ b/app/views/web/ost/index/_home_carousel_content.erb
@@ -1,51 +1,52 @@
 <div class="w-100 content">
+  <%if item['news_list_video_embed'] &&  ! item['news_list_article_link']%>
+    <div class="video-wrapper">
+      <button type="button" class="font-weight-light btn video-btn h-100 w-100" data-toggle="modal" data-src="<%=item['news_list_video_embed'] %>" data-target="#helpVideoModal">
+          <span class="play-icon">
+            <svg class="icon-play align-middle">
+              <switch>
+                <use class="icon-play" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+              </switch>
+            </svg>
+          </span>
+      </button>
 
-  {{#ifVideo video_embed article_link}}
-  <div class="video-wrapper">
-    <button type="button" class="font-weight-light btn video-btn h-100 w-100" data-toggle="modal" data-src="{{video_embed}}" data-target="#helpVideoModal">
-        <span class="play-icon">
-          <svg class="icon-play align-middle">
-            <switch>
-              <use class="icon-play" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
-            </switch>
-          </svg>
-        </span>
-    </button>
-    {{#ifImage image}}
-    <div class="img-wrapper">
-      <img class="img-fluid" src="{{image}}" alt="image"/>
+      <%if item['news_list_image'] %>
+        <div class="img-wrapper">
+          <img class="img-fluid" src="<%=item['news_list_image'] %> " alt="image"/>
+        </div>
+      <%end%>
     </div>
-    {{/ifImage}}
-  </div>
-  {{/ifVideo}}
-  {{#ifArticle article_link}}
-  <div class="article-wrapper">
-    {{#ifImage image}}
-    <div class="img-wrapper">
-      <img class="img-fluid" src="{{image}}" alt="image"/>
+  <%end %>
+
+  <% if item['news_list_article_link']%>
+    <div class="article-wrapper">
+      <%if item['news_list_image'] %>
+        <div class="img-wrapper">
+          <img class="img-fluid" src=<%=item['news_list_image']%> alt="image"/>
+        </div>
+      <%end%>
     </div>
-    {{/ifImage}}
-  </div>
-  {{/ifArticle}}
+  <%end%>
 
-  {{#ifTitle title }}
-  <div class="carousel-title">
-    {{title}}
-  </div>
-  {{/ifTitle}}
-
-  {{#ifDescription description}}
-  <div class="carousel-description">
-    {{description}}
-  </div>
-  {{/ifDescription}}
-
-  {{#ifDate date}}
-  <div class="w-100 date-wrapper">
-    <div class='date-content'>
-      <div class="date-text">{{date}}</div>
+  <%if item['news_list_title'] %>
+    <div class="carousel-title">
+      <%= raw(item['news_list_title']) %>
     </div>
-  </div>
-  {{/ifDate}}
+  <%end %>
+
+  <%if item['news_list_description']%>
+    <div class="carousel-description">
+      <%= raw(item['news_list_description']) %>
+    </div>
+  <%end%>
+
+  <%if item['news_list_date']%>
+    <div class="w-100 date-wrapper">
+      <div class='date-content'>
+        <div class="date-text"><%=Time.at(item['news_list_date'].to_i).strftime("%d %b %Y")%></div>
+      </div>
+    </div>
+  <%end %>
 
 </div>
