--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -14,7 +14,7 @@
         <% berlin_careers_response.each_with_index do|member, index| %>
 
           <h5 class="mt-4 pt-2">
-            <a href="<%=member['careers_url'] %>" target="_blank" title="<%= raw (member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
+            <a href="<%= raw(member['careers_url']) %>" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
               <svg class="icon-open-tab">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -22,7 +22,7 @@
                 </svg>
             </a>
           </h5>
-          <p><%=member['careers_description'] %></p>
+          <p><%= raw(member['careers_description']) %></p>
           <div class="horizontal-line"></div>
         <% end %>
       <% end %>
@@ -37,7 +37,7 @@
         <% pune_careers_response.each_with_index do|member, index| %>
 
           <h5 class="mt-4 pt-2">
-            <a href="<%=member['careers_url'] %>" target="_blank" title="<%=member['careers_title'] %>"><%=member['careers_title'] %>&nbsp;
+            <a href="<%= raw(member['careers_url']) %>" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
               <svg class="icon-open-tab">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -45,7 +45,7 @@
               </svg>
             </a>
           </h5>
-          <p><%=member['careers_description'] %></p>
+          <p><%= raw(member['careers_description']) %></p>
           <div class="horizontal-line"></div>
         <% end %>
       <% end %>
