--- a/app/views/web/ost/index/_home_carousel.erb
+++ b/app/views/web/ost/index/_home_carousel.erb
@@ -8,24 +8,28 @@
           </switch>
         </svg>&nbsp;news
       </h1>
+      <%
+        news = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_news]['api_response'] || []) rescue []
+        if news.present?
+      %>
       <div id="home-carousel-wrapper" class="pb-5">
 
         <div class="one-el-carousel">
           <div class="w-100 one-el-wrapper">
             <div class="content-wrapper">
-                <% if @news[0]['news_list_article_link']%>
-                  <a href=" <%@news[0]['news_list_article_link'] %> " target="_blank" title= <%=@news[0]['news_list_title'] %>>
-                    <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {"item": @news[0]} %>
+                <% if news[0]['news_list_article_link']%>
+                  <a href=" <%news[0]['news_list_article_link'] %> " target="_blank" title= <%=news[0]['news_list_title'] %>>
+                    <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[0]} %>
                   </a>
                 <%else %>
-                   <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {"item": @news[0]} %>
+                   <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[0]} %>
                 <%end %>
             </div>
           </div>
         </div>
 
-        <% @news.delete_at(0) %>
-        <% @news.each_with_index do|item, index| %>
+        <% news.delete_at(0) %>
+        <% news.each_with_index do|item, index| %>
           <% if index % 2 == 1 %>
             <% next %>
           <% end %>
@@ -33,21 +37,21 @@
             <div class="w-100 tow-el-wrapper">
               <div class="content-wrapper">
 
-                  <%if @news[index]['news_list_article_link'] %>
-                    <a href=<%=@news[index]['news_list_article_link'] %> target="_blank" title=<%=@news[index]['news_list_title'] %>>
-                      <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: @news[index]} %>
+                  <%if news[index]['news_list_article_link'] %>
+                    <a href=<%= raw(news[index]['news_list_article_link']) %> target="_blank" title=<%=raw(news[index]['news_list_title']) %>>
+                      <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[index]} %>
                     </a>
                   <%else%>
-                    <%= render :partial => "/web/ost/index/home_carousel_content",locals: {item:@news[index]} %>
+                    <%= render :partial => "/web/ost/index/home_carousel_content",locals: {item:news[index]} %>
                   <%end%>
-                  <%if @news[index+1].present? %>
+                  <%if news[index+1].present? %>
                     <% index += 1 %>
-                    <%if @news[index]['news_list_article_link'] %>
-                      <a href=<%=@news[index]['news_list_article_link'] %> target="_blank" title=<%=@news[index]['news_list_title'] %>>
-                        <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: @news[index]} %>
+                    <%if news[index]['news_list_article_link'] %>
+                      <a href=<%= raw(news[index]['news_list_article_link']) %> target="_blank" title=<%=raw(news[index]['news_list_title']) %>>
+                        <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[index]} %>
                       </a>
                     <%else%>
-                      <%= render :partial => "/web/ost/index/home_carousel_content",locals: {item:@news[index]} %>
+                      <%= render :partial => "/web/ost/index/home_carousel_content",locals: {item:news[index]} %>
                     <%end%>
                   <%end%>
               </div>
@@ -55,6 +59,7 @@
           </div>
         <%end%>
       </div>
+      <% end %>
     </div>
   </div>
 </section>
