--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -19,26 +19,26 @@
 
             <div class="col-12 col-md-4" itemprop="member" itemscope itemtype="http://schema.org/Person">
               <div class="thumbnail">
-                <img class='img-fluid' itemprop="photo" src="<%=member['members_list_image'] %>" alt="<%=member['members_list_name'] %>">
+                <img class='img-fluid' itemprop="photo" src="<%=raw(member['members_list_image']) %>" alt="<%=raw(member['members_list_name']) %>">
                 <div class="caption">
-                  <h5 itemprop="name"><%=member['members_list_name'] %></h5>
-                  <h6 itemprop="jobTitle"><%=member['members_list_title'] %></h6>
-                  <p class="mb-2"><%=member['members_list_description'] %></p>
+                  <h5 itemprop="name"><%=raw(member['members_list_name']) %></h5>
+                  <h6 itemprop="jobTitle"><%=raw(member['members_list_title']) %></h6>
+                  <p class="mb-2"><%=raw(member['members_list_description']) %></p>
                   <p>
                     <% if member['members_list_linkedIn'].present? %>
-                      <a class="profile-links" target="_blank" href="<%= member['members_list_linkedIn'] %>">LinkedIn</a>
+                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_linkedIn']) %>">LinkedIn</a>
                     <% end %>
                     <% if member['members_list_twitter'].present? %>
                       <% if member['members_list_linkedIn'].present? %>•&nbsp;<% end %>
-                      <a class="profile-links" target="_blank" href="<%= member['members_list_twitter'] %>">Twitter</a>
+                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_twitter']) %>">Twitter</a>
                     <% end %>
                     <% if member['members_list_medium'].present? %>
                       <% if member['members_list_linkedIn'].present? || member['members_list_twitter'].present? %>•&nbsp;<% end %>
-                      <a class="profile-links" target="_blank" href="<%= member['members_list_medium'] %>">Medium</a>
+                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_medium']) %>">Medium</a>
                     <% end %>
                     <% if member['members_list_website'].present? %>
                       <% if member['members_list_linkedIn'].present? || member['members_list_twitter'].present? || member['members_list_medium'].present? %>•&nbsp;<% end %>
-                      <a class="profile-links" target="_blank" href="<%= member['members_list_website'] %>">Website</a>
+                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_website']) %>">Website</a>
                     <% end %>
                   </p>
                 </div>
