--- a/app/views/web/ost/index/_home_carousel.erb
+++ b/app/views/web/ost/index/_home_carousel.erb
@@ -18,7 +18,7 @@
           <div class="w-100 one-el-wrapper">
             <div class="content-wrapper">
                 <% if news[0]['news_list_article_link']%>
-                  <a href=" <%news[0]['news_list_article_link'] %> " target="_blank" title= <%=news[0]['news_list_title'] %>>
+                  <a href=<%= news[0]['news_list_article_link'] %> target="_blank" title= <%=news[0]['news_list_title'] %>>
                     <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[0]} %>
                   </a>
                 <%else %>
