--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -1,5 +1,6 @@
 <%= render :partial => "/web/ost/index/uber_banner" %>
-<%= render :partial => "/shared/web/common/navbar" %>
+<%#= render :partial => "/shared/web/common/navbar" %>
+<%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron" %>
 <%= render :partial => "/web/ost/index/events_carousel" %>
 <%= render :partial => "/web/ost/index/partners" %>
