--- a/app/views/web/ost/index/_uber_banner.erb
+++ b/app/views/web/ost/index/_uber_banner.erb
@@ -6,7 +6,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#uber-banner-megaphone-icon"></use>
         </switch>
       </svg>
-      <a href="https://medium.com/ostdotcom/ost-project-roadmap-2017-2021-scaling-blockchain-economies-to-billions-of-users-7754f58112a6" target="_blank" class="align-middle" title="OST Roadmap 2017 - 2021">OST Roadmap 2017 - 2021: Scaling Blockchain Economies to Billions of Users. Learn More.</a>
+      <a href="https://medium.com/ostdotcom/video-slides-from-ethberlin-introducing-openst-mosaic-protocol-running-meta-blockchains-on-d1b6b803b4b8" target="_blank" class="align-middle" title="OpenST Mosaic">New! OpenST Mosaic: Running meta-blockchains on Ethereum to scale DApps to billions of users</a>
     </div>
   </div>
 </div>
@@ -19,7 +19,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#uber-banner-megaphone-icon"></use>
         </switch>
       </svg>
-      <a href="https://medium.com/ostdotcom/ost-project-roadmap-2017-2021-scaling-blockchain-economies-to-billions-of-users-7754f58112a6" target="_blank" class="align-middle" title="OST Roadmap 2017 - 2021">OST Roadmap 2017 - 2021: Scaling Blockchain Economies to Billions of Users. Learn More.</a>
+      <a href="https://medium.com/ostdotcom/video-slides-from-ethberlin-introducing-openst-mosaic-protocol-running-meta-blockchains-on-d1b6b803b4b8" target="_blank" class="align-middle" title="OpenST Mosaic">New! OpenST Mosaic: Running meta-blockchains on Ethereum to scale DApps to billions of users</a>
     </div>
   </div>
 </div>
