--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -14,12 +14,12 @@
       <input type="checkbox" id="tm">
       <ul class="main-menu clearfix m-0 p-0 list-unstyled">
 
-        <li><a href="javascript:void(0)" class="text-uppercase">Products
+        <li><a href="javascript:void(0)" class="main-nav-item">Products
           <span class="drop-icon"></span>
           <label title="Toggle Drop-down" class="drop-icon" for="products"></label>
         </a>
           <input type="checkbox" id="products">
-          <ul class="sub-menu drop-icon-top list-unstyled pt-3 px-1">
+          <ul class="sub-menu drop-icon-top list-unstyled pt-0 pt-md-3 px-1 mx-2 mx-md-0">
             <li>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST - KIT">
                 <img src="//d36lai1ppm9dxu.cloudfront.net/assets/image/ost-kyc/ost-kit-brand-nav-menu.svg" width="80"/>
@@ -41,12 +41,12 @@
           </ul>
         </li>
 
-        <li><a href="javascript:void(0)" class="text-uppercase">Developers
+        <li><a href="javascript:void(0)" class="main-nav-item">Developers
           <span class="drop-icon"></span>
           <label title="Toggle Drop-down" class="drop-icon" for="developers"></label>
         </a>
           <input type="checkbox" id="developers">
-          <ul class="sub-menu drop-icon-top list-unstyled pt-3 px-1">
+          <ul class="sub-menu drop-icon-top list-unstyled pt-0 pt-md-3 px-1 mx-2 mx-md-0">
             <li>
               <a href="https://dev.ost.com" target="_blank" class="nav-svg-link d-flex align-items-center" title="API Reference">
                 <svg class="nav-svg">
@@ -57,7 +57,12 @@
                 <span class="pl-2">API Reference</span>
               </a>
             </li>
-            <li><a href="javascript:void(0)" class="text-uppercase">Dev Challenges
+            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
+              <svg class="nav-svg">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-api-reference-icon"></use>
+                </switch>
+              </svg><span class="pl-2">Dev Challenges</span>
               <span class="drop-icon drop-icon-right"></span>
               <label title="Toggle Drop-down" class="drop-icon" for="winners"></label>
             </a>
@@ -129,12 +134,12 @@
         </li>
 
 
-        <li><a href="javascript:void(0)" class="text-uppercase">Company
+        <li><a href="javascript:void(0)" class="main-nav-item">Company
           <span class="drop-icon"></span>
           <label title="Toggle Drop-down" class="drop-icon" for="company"></label>
         </a>
           <input type="checkbox" id="company">
-          <ul class="sub-menu drop-icon-top list-unstyled pt-3 px-1">
+          <ul class="sub-menu drop-icon-top list-unstyled pt-0 pt-md-3 px-1 mx-2 mx-md-0">
             <li>
               <a href="<%= GlobalConstant::Base.root_url %>team" class="nav-svg-link d-flex align-items-center" title="Team">
                 <svg class="nav-svg">
@@ -211,7 +216,7 @@
       </ul>
 
       <div class="d-none d-md-inline ml-auto" style="font-size: 0">
-        <ul>
+        <ul class="p-0 m-0">
           <li>
             <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
               <span class="header-social-telegram-icon"></span>
