--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -50,6 +50,14 @@
                 <a href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
               </div>
             </div>
+            <div class="col-xs-12 col-sm-3 align-self-end">
+              <a class="d-inline-block" href="https://www.idcm.io/trading/OST_BTC" target="_blank" title="Buy OST on IDCM">
+                <span class="buy-ost-idcm-icon"></span>
+              </a>
+              <div class="btn-container mt-4 mb-5">
+                <a href="https://www.idcm.io/trading/OST_BTC" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
+              </div>
+            </div>
           </div>
 
         </div>
