--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -34,7 +34,7 @@
           </div>
 
           <div class="row justify-content-center">
-            <div class="col-xs-12 col-sm-3 align-self-end">
+            <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
               <a class="d-inline-block" href="https://www.upbit.com/" target="_blank" title="Buy OST on Upbit">
                 <span class="buy-ost-upbit-icon"></span>
               </a>
@@ -42,7 +42,7 @@
                 <a href="https://www.upbit.com/" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-3 align-self-end">
+            <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
               <a class="d-inline-block" href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" title="Buy OST on Coinsuper">
                 <span class="buy-ost-coin-super-icon"></span>
               </a>
@@ -50,7 +50,7 @@
                 <a href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-3 align-self-end">
+            <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
               <a class="d-inline-block" href="https://www.idcm.io/trading/OST_BTC" target="_blank" title="Buy OST on IDCM">
                 <span class="buy-ost-idcm-icon"></span>
               </a>
