--- a/app/views/web/ost/partners/_partner_companies.erb
+++ b/app/views/web/ost/partners/_partner_companies.erb
@@ -1,6 +1,45 @@
 <%
-  partner_companies_count = 30;
+  partner_companies_count = 31;
   partner_companies = [
+    {
+      name: "PassKit",
+      categories: [
+        "loyalty"
+      ],
+      size: "large",
+      on_hover_bgcolor: "#AEE1E3",
+      on_hover_imgcolor: "classname",
+      sprite_index: 30,
+      has_exited: false,
+      description_html: "Unsplash is the world’s leading photography platform. Unsplash served more than 5.4 Billion photo views in January, up more than 300% from 12 months ago. Unsplash and OST are partnering to reinvent, decentralize, and democratize photography.",
+      location: "Montreal",
+      website: "https://unsplash.com/",
+      founders: [
+        {
+          name: "Steph Liverani"
+        },
+        {
+          name: "Mikael Cho"
+        },
+        {
+          name: "Luke Chesser"
+        }
+      ],
+      social: [
+        {
+          name: "Twitter",
+          link: "https://twitter.com/unsplash"
+        },
+        {
+          name: "Medium",
+          link: "https://medium.com/unsplash"
+        },
+        {
+          name: "LinkedIn",
+          link: "https://www.linkedin.com/company/unsplash/"
+        }
+      ]
+    },
     {
       name: "Unsplash",
       categories: [
