position for QA

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -90,6 +90,11 @@
               profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1nzMTcfcPMW5N0nRAyc4B8g-&embedsource=Embed",
               description: "OST “Simple Token” is looking for technical product managers who are passionate about bridging blockchain technology and real world problems. We’re specifically looking for business owners with deep technical knowledge: technical product managers who think holistically about the product, the underlying technology, and who can function as mini CEO’s of their product lines, with complete ownership over project plans, deliverables timelines, specs, user experience, business cases, customer validation, and usage metrics.",
             },
+            {
+              profile: "Quality Assurance Automation Engineer",
+              profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1nWftZEJA4EYYXCAtCLjyZw-&embedsource=Embed",
+              description: "OST “Simple Token” is looking for API Automation QA Engineers with a passion for blockchain technology and decentralized systems to join the engineering team. Looking out for individuals who are super passionate about driving adoption of Ethereum and digital currency to the world and enacting consumer-app tokenization.",
+            },
         ]
       %>
 
